# lovesynths-qt-tcp

./: CMakeLists.txt  floating_fix.h  lovecommunicationtcp.cpp  lovecommunicationtcp.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
